--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "actions": "^1.3.0",
     "firebase": "^9.9.0",
     "firestore": "^1.1.6",
+    "immer": "^9.0.15",
     "immutable": "^4.1.0",
     "open-color": "^1.9.1",
     "react": "^18.2.0",
@@ -24,6 +25,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-actions": "^2.6.5",
+    "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.5",
     "thunk": "^0.0.1",
