--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@testing-library/user-event": "^13.2.1",
     "actions": "^1.3.0",
     "firebase": "^9.9.0",
+    "firebase-tools": "^11.3.0",
     "firestore": "^1.1.6",
+    "global": "^4.4.0",
     "immer": "^9.0.15",
     "immutable": "^4.1.0",
     "open-color": "^1.9.1",
